--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "webpack serve --open --mode=development"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "glsl-shader-loader": "^0.1.6",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
