--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=development",
-    "start": "webpack serve --open --mode=development"
+    "build": "webpack",
+    "start": "webpack serve --open"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "glsl-shader-loader": "^0.1.6",
     "html-webpack-plugin": "^5.5.0",
@@ -18,6 +24,9 @@
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
-    "glslCanvas": "^0.1.7"
+    "glslCanvas": "^0.1.7",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
